// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backendStatusReducer.test.js updates backend status on error properly 1`] = `
{
  "1234": {
    "error": "error",
    "loading": false,
    "status": {},
  },
}
`;

exports[`backendStatusReducer.test.js updates backend status on loaded properly 1`] = `
{
  "1234": {
    "error": false,
    "loading": false,
    "status": {
      "gem2s": {
        "status": "NotCreated",
      },
      "pipeline": {
        "status": "Running",
      },
    },
  },
}
`;

exports[`backendStatusReducer.test.js updates backend status on loading properly 1`] = `
{
  "1234": {
    "error": false,
    "loading": true,
    "status": null,
  },
}
`;

exports[`backendStatusReducer.test.js updates backend status on updated properly 1`] = `
{
  "1234": {
    "error": false,
    "loading": true,
    "status": {
      "gem2s": {
        "status": "Running",
      },
      "pipeline": {
        "status": "NotCreated",
      },
    },
  },
}
`;
